--- a/13 Графика. Canvas/canvas.html
+++ b/13 Графика. Canvas/canvas.html
@@ -9,6 +9,10 @@
     
     <canvas id="canvas" width="200" height="200"></canvas>
 		
+	<style>
+		*{
+			box-sizing: border-box;
+		}
 	</style>
     <script src ="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="canvas.js"></script>
